cduce/tests/full/bad/no_xml_plugin.t/run.t
  $ cduce --verbose --compile  no_xml_plugin.cd
  $ cduce --no pxp --no expat --no markup --run  no_xml_plugin.cdo
  Uncaught CDuce exception: "Failure(\"No XML parser available\")"
  [1]
